--- a/nativos.css
+++ b/nativos.css
@@ -1,70 +1,177 @@
 body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    color: black;
-    background-image: linear-gradient( 179deg,  rgba(0,0,0,1) 9.2%, rgba(127,16,16,1) 103.9% );
-  }
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+  color: black;
+  background-image: linear-gradient(179deg, rgba(0, 0, 0, 1) 9.2%, rgba(127, 16, 16, 1) 103.9%);
+}
 
 header {
-    color: black;
-    background-color: white;
-    padding: 20px 0;
+  color: black;
+  background-color: white;
+  padding: 20px 0;
 }
 
 .caixa {
-    position: relative;
-    width: 940px;
-    margin: 0 auto;
-  }
+  position: relative;
+  width: 940px;
+  margin: 0 auto;
+}
 
 nav {
-    position: absolute;
-    top: 0px;
-    right: 0;
-  }
+  position: absolute;
+  top: 0px;
+  right: 0;
+}
 
- nav li {
-    display: inline;
-    margin: 0 0 0 15px;
-  }
-  
-  nav a {
-    color: black;
-    font-weight: bold;
-    font-size: 20px;
-    text-decoration: none;
-  }
+nav li {
+  display: inline;
+  margin: 0 0 0 15px;
+}
 
-  nav a:hover {
-    color: rgb(138, 59, 125);
-    text-decoration: underline;
-  }
-  
+nav a {
+  color: black;
+  font-weight: bold;
+  font-size: 20px;
+  text-decoration: none;
+}
+
+nav a:hover {
+  color: rgb(138, 59, 125);
+  text-decoration: underline;
+}
+
 
 h1 {
-    opacity: 0; /* Inicialmente invisível */
-    transform: translateY(-50px); /* Posição inicial acima */
-    animation: titleEntrance 1s forwards; /* Animação de entrada */
-  }
-
+  opacity: 0;
+  /* Inicialmente invisível */
+  transform: translateY(-50px);
+  /* Posição inicial acima */
+  animation: titleEntrance 1s forwards;
   /* Animação de entrada */
-  @keyframes titleEntrance {
-    to {
-      opacity: 1; /* Torna o título visível */
-      transform: translateY(0); /* Retorna à posição original */
-    }
+}
+
+/* Animação de entrada */
+@keyframes titleEntrance {
+  to {
+    opacity: 1;
+    /* Torna o título visível */
+    transform: translateY(0);
+    /* Retorna à posição original */
+  }
+}
+
+h2 {
+  color: white;
+  text-align: center;
+  padding: 10px;
+  font-size: 25px;
+}
+
+iframe {
+  padding: 20px 10px;
+  margin: auto;
+  display: block;
+}
+
+/* ESTILIZAÇÃO DO MENU-MOBILE */
+.caixa-mobile {
+  background-color: rgba(17, 0, 91, 0.711);
+  backdrop-filter: blur(10px);
+  position: absolute;
+  top: 70px;
+  left: 0px;
+  width: 100%;
+  height: 0;
+  z-index: 10;
+  visibility: hidden;
+  transition: 0.5s;
+  overflow: hidden;
+}
+
+.caixa-mobile nav a {
+  color: white;
+  display: block;
+  padding: 20px 30px;
+  width: 100%;
+}
+
+.caixa-mobile nav a:hover {
+  background-color: rgb(134, 134, 0);
+}
+
+#botao-menu {
+  background: transparent;
+  width: 50px;
+  height: 50px;
+  outline: none;
+  cursor: pointer;
+  border: 5px solid rgba(17, 0, 91, 0.711);
+  border-radius: 2px;
+  transition: 0.2s;
+  display: none;
+}
+
+
+.linha {
+  position: relative;
+  width: 20px;
+  height: 3px;
+  background-color: rgba(17, 0, 91, 0.711);
+  display: block;
+  margin: 5px auto;
+  transform-origin: center;
+  transition: 0.2s;
+}
+
+#botao-menu.ativar {
+  border: 5px solid red;
+}
+
+#botao-menu.ativar .linha:nth-child(1) {
+  transform: translateY(8px) rotate(-45deg);
+  background-color: red;
+}
+
+#botao-menu.ativar .linha:nth-child(3) {
+  transform: translateY(-8px) rotate(45deg);
+  background-color: red;
+}
+
+#botao-menu.ativar .linha:nth-child(2) {
+  width: 0;
+}
+
+.titulo,
+.direita,
+.esquerda,
+.efeito-na-imagem1 {
+  visibility: hidden;
+}
+
+@media screen and (max-width: 1020px) {
+
+  /* MENU */
+  .caixa {
+    display: none;
   }
 
- h2 {
-    color:white;
-    text-align: center;
-    padding: 10px;
-    font-size: 25px;
- }
+  .caixa-mobile.abrir {
+    visibility: visible;
+    height: calc(100vh - 50px);
+  }
 
-  iframe {
-    padding: 20px 10px;
-    margin: auto;
+  #botao-menu {
     display: block;
   }
+
+  .caixa-mobile nav {
+    position: absolute;
+    top: 20px;
+    left: 0;
+  }
+
+  iframe {
+    width: 90%;
+  }
+}
