--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Playwrite+IN:wght@100..400&display=swap');
+
 body {
-  font-family: 'Arial', sans-serif;
   margin: 0;
   padding: 0;
   color: black;
   background: white;
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: normal;
 }
 
 header {
@@ -43,6 +49,10 @@ nav a:hover {
 
 h1 {
   opacity: 0;
+  font-family: "Playwrite IN", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
   /* Inicialmente invisível */
   transform: translateY(-50px);
   /* Posição inicial acima */
@@ -67,20 +77,21 @@ h2 {
 }
 
 .titulo-principal {
-  font-size: 30px;
   color: white;
   background-color: #8BC6EC;
   background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
-  padding: 320px 0;
+  padding: 200px 0;
   text-align: center;
 }
 
 .titulo-principal h1 {
+  font-size: 40px;
   text-shadow: rgb(63, 121, 238) 1px 0 10px;
 }
 
 .subtitulo {
-  font-size: 18px;
+  font-size: 20px;
+  padding: 5px 30px;
 }
 
 .botoes {
@@ -98,6 +109,10 @@ h2 {
   box-shadow: 0 0 10px #eee;
   border-radius: 10px;
   border: white;
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: normal;
 }
 
 .botao:hover {
@@ -119,6 +134,10 @@ main p {
   margin: 0 auto;
   text-align: center;
   position: relative;
+  font-size: 18px;
+  padding: 10px;
+  color: white;
+  background-image: linear-gradient(to right, #4CB8C4 0%, #3CD3AD 51%, #4CB8C4 100%);
   /* Adicionado para posicionar as setas */
 }
 
@@ -164,7 +183,7 @@ img {
 }
 
 figcaption {
-  font: italic smaller sans-serif;
+  font: italic smaller;
   padding: 0px;
   text-align: center;
   font-size: 15px;
@@ -177,13 +196,6 @@ blockquote {
 
 footer {
   padding: 0px;
-}
-
-.depoimentos {
-  font-size: 18px;
-  padding: 10px;
-  color: white;
-  background-image: linear-gradient(to right, #4CB8C4 0%, #3CD3AD 51%, #4CB8C4 100%);
 }
 
 .content {
@@ -217,11 +229,17 @@ footer {
 }
 
 .rodape {
-  font-size: 18px;
   padding: 40px 0;
   text-align: center;
   background: rgb(50, 48, 96);
   color: white;
+}
+
+.rodape h2 {
+  font-family: "Playwrite IN", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .rodape img {
@@ -344,7 +362,7 @@ footer {
   }
 
   .titulo-principal h1 {
-    font-size: 25px;
+    font-size: 28px;
   }
 
   h2 {
@@ -366,10 +384,14 @@ footer {
     font-size: 16px;
   }
 
+  main {
+    padding: 5px 10px;
+  }
+
   /* DEPOIMENTOS */
 
   .depoimentos {
-    width: 100%;
+    width: 90%;
     font-size: 15px;
   }
 
@@ -390,5 +412,15 @@ footer {
   .jogo p {
     font-size: 18px;
   }
+
+    /* RODAPÉ */
+
+    .rodape h2 {
+      font-size: 22px;
+    }
+  
+    .rodape {
+      font-size: 16px;
+    }
 
 }
