--- a/nativos.css
+++ b/nativos.css
@@ -1,5 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Playwrite+IN:wght@100..400&display=swap');
+
 body {
-  font-family: 'Arial', sans-serif;
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: normal;
   margin: 0;
   padding: 0;
   color: black;
@@ -44,6 +50,10 @@ nav a:hover {
 
 h1 {
   opacity: 0;
+  font-family: "Playwrite IN", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
   /* Inicialmente invisível */
   transform: translateY(-50px);
   /* Posição inicial acima */
