--- a/sobre.css
+++ b/sobre.css
@@ -99,7 +99,7 @@ p {
 
 .apresentacao {
   font-size: 20px;
-  padding: 100px;
+  padding: 100px 70px;
   display: flex;
   align-items: center;
   /* Alinhar verticalmente */
@@ -110,6 +110,7 @@ p {
 .apresentacao p {
   text-indent: 1em;
   text-align: justify;
+  padding: 20px;
 }
 
 .imagens img {
@@ -205,6 +206,7 @@ figcaption {
   justify-content: center;
   /* Centralizar horizontalmente */
   margin: 0 20px;
+  gap: 20px;
 }
 
 .copyright {
@@ -354,7 +356,7 @@ figcaption {
   }
 
   .img-inicio {
-    width: 150%;
+    width: 100%;
   }
 
   .apresentacao p {
